--- a/public/css/style.css
+++ b/public/css/style.css
@@ -18,6 +18,8 @@
 .slide-container {
   margin: 0 30px;
   padding: 30px 0;
+  padding-right: 30px;
+  padding-left: 30px;
   overflow: hidden;
 }
 .card {
