--- a/public/css/style.css
+++ b/public/css/style.css
@@ -24,7 +24,7 @@
 .card {
   background: #fff;
   border-radius: 8px;
-  box-shadow: 10px 10px 20px #c5c5c5,-10px -10px 20px #fff;
+  box-shadow: 10px 10px 15px #c5c5c5,-10px -10px  #fff;
   
 
 }
@@ -190,7 +190,6 @@
       color:#000000;
       border-radius: 20px;
       border: rounded;
-      box-shadow: 10px 10px 20px #c5c5c5,-10px -10px 20px #fff;
       overflow: hidden;
 
   }
