--- a/public/css/style.css
+++ b/public/css/style.css
@@ -109,7 +109,7 @@
 #spinner {
     opacity: 0;
     visibility: hidden;
-    transition: opacity .5s ease-out, visibility 0s linear .5s;
+    transition: opacity .5s ease-out, visibility 0s linear 2s;
     z-index: 99999;
 }
 
