--- a/public/css/login.css
+++ b/public/css/login.css
@@ -441,7 +441,7 @@
 
 body{
     height: 100vh;
-    background-image: url(https://picstatio.com/large/vua9gg/cute-anime-girl-snowflakes-original.jpg);
+    background-image: url(https://c4.wallpaperflare.com/wallpaper/178/942/477/akemi-black-blood-close-wallpaper-preview.jpg);
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
