--- a/resources/views/backup/karyasiswa_view.html
+++ b/resources/views/backup/karyasiswa_view.html
@@ -40,6 +40,42 @@
   <body class="">
 <main>
  
+
+  <!-- Navbar Start -->
+<nav class="navbar navbar-expand-lg bg-white navbar-light shadow sticky-top p-0" style="border-radius: 0 0 30px 30px;">
+    <a  class="navbar-brand d-flex align-items-center px-4 px-lg-5">
+        <h2 class="m-0 text-danger"><i class="fas fa-users me-3"></i>KaryaSiswa</h2>
+    </a>
+    <button type="button" class="navbar-toggler me-4" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarCollapse">
+        <div class="navbar-nav ms-auto p-4 p-lg-0"> 
+            <a href="/Home" class="nav-item nav-link">Home</a>
+            <div class="nav-item dropdown text-danger">
+                <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Kegiatan</a>
+                <div class="dropdown-menu fade-down m-9">
+                    <a href="/Pembelajaran" class="dropdown-item">Studi</a>
+                    <a href="/Ekskul" class="dropdown-item">Ekskul</a>
+                    <a href="/GaleriSekolah" class="dropdown-item">GaleriSekolah</a>
+                    <a href="/Quotes" class="dropdown-item">Quotes</a>
+                </div>
+            </div>
+            <a href="/Prestasi" class="nav-item nav-link">Prestasi</a>
+            <a href="/Login" class="nav-item nav-link">Login</a>
+            <div class="nav-item dropdown text-danger">
+              <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown"></a>
+              <div class="dropdown-menu fade-down m-9">
+                  <a href="/TentangKami" class="dropdown-item">TentangKami</a>
+                  <a href="/Guru" class="dropdown-item">GuruKami</a>
+                    <a href="/TimKami" class="dropdown-item">TimKami</a>
+                    <a href="/PageNotFound" class="dropdown-item">PageNotFound</a>
+                </div>
+            </div>
+        </div>
+    </div>
+</nav>
+<!-- Navbar End -->
     <!-- Header Start -->
     <div class="container-fluid bg-danger py-5 mb-5 page-header">
         <div class="container py-5">
@@ -69,83 +105,43 @@
             <h6 class="section-title bg-white text-center text-danger px-3">Karya</h6>
             <h1 class="mb-5">Karya Siswa</h1>
         </div>
-        <div class="row row-cols-1 row-cols-md-3 g-4 mt-3 rounded">
-            <div class="col">
-              <div class="card text-center  h-100 mb-3">
-                <img src="" class="img-fluid rounded-top" alt="Responsive image" style="object-fit: cover">
-                <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
-                  <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content.</p>
+        <div id="article-container">
+          <!-- Data artikel akan ditampilkan di sini -->
+      </div>
+      
+      <script>
+       $(document).ready(function() {
+    $.get('/api/show', function(data) {
+        var articleContainer = $('#article-container'); // Pilih elemen kontainer
+        
+        data.forEach(function(article, index) {
+            var articleHtml = `
+                <div class="col-md-4 mb-3">
+                    <div class="card text-center h-100">
+                        ${article.images.length > 0 ? `
+                            <img src="${article.images[0].image_path}" class="card-img-top" alt="Article Image" style="object-fit: cover; height: 200px;">
+                        ` : `
+                            <img src="/path-to-default-image.jpg" class="card-img-top" alt="Article Image" style="object-fit: cover; height: 200px;">
+                        `}
+                        <div class="card-body">
+                            <h5 class="card-title">${article.title}</h5>
+                            <p class="card-text">${article.description}</p>
+                        </div>
+                        <div class="card-footer">
+                            <a href="/article/${article.id}" class="btn btn-primary">View</a>
+                        </div>
+                    </div>
                 </div>
-                <div class="card-footer ">
-                  <button type="button" >View</button>
-                </div>
-              </div>
-            </div>
-            <div class="col">
-              <div class="card text-center h-100 mb-3">
-                <img src="" class="img-fluid rounded-top" alt="Responsive image" style="object-fit: cover">
-                <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
-                  <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
-                </div>
-                <div class="card-footer">
-                  <button type="button" >View</button>
-                </div>
-              </div>
-            </div>
-            <div class="col">
-              <div class="card text-center  h-100">
-                <img src="" class="img-fluid rounded-top" alt="Responsive image" style="object-fit: cover">
-                <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
-                  <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content.</p>
-                </div>
-                <div class="card-footer ">
-                  <button type="button">View</button>
-                </div>
-              </div>
-            </div>
-            <div class="col">
-                <div class="card text-center h-100 mb-3">
-                  <img src="" class="img-fluid rounded-top" alt="Responsive image" style="object-fit: cover">
-                  <div class="card-body">
-                    <h5 class="card-title">Card title</h5>
-                    <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
-                  </div>
-                  <div class="card-footer">
-                    <button type="button" >View</button>
-                  </div>
-                </div>
-              </div>
-              <div class="col">
-                <div class="card text-center h-100 mb-3">
-                  <img src="" class="img-fluid rounded-top" alt="Responsive image" style="object-fit: cover">
-                  <div class="card-body">
-                    <h5 class="card-title">Card title</h5>
-                    <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
-                  </div>
-                  <div class="card-footer">
-                    <button type="button" >View</button>
-                  </div>
-                </div>
-              </div>
-              <div class="col">
-                <div class="card text-center h-100 mb-3">
-                  <img src="" class="img-fluid rounded-top" alt="Responsive image" style="object-fit: cover">
-                  <div class="card-body">
-                    <h5 class="card-title">Card title</h5>
-                    <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
-                  </div>
-                  <div class="card-footer">
-                    <button type="button" >View</button>
-                  </div>
-                </div>
-              </div>
-          </div>      
-        </div>
-    </div>
-  </div>
+            `;
+            
+            articleContainer.append(articleHtml); // Tambahkan elemen baru ke kontainer
+        });
+    });
+});
+
+      </script>
+      
+        
 </main>
 
 
