--- a/resources/views/backup/ekskul_view2(api).html
+++ b/resources/views/backup/ekskul_view2(api).html
@@ -189,26 +189,23 @@ try {
         $data = json_decode($response->getBody(), true);
 
         // Loop melalui data dan tampilkan di halaman HTML
-     foreach ($data as $index => $ekskul) {
-    $index = (int)$index; // Pastikan $index adalah integer
-    $orderClass = $index % 2 === 0 ? 'order-lg-2' : 'order-lg-1';
-    $align = $index % 2 === 0 ? 'left' : 'right';
-    // Selanjutnya, gunakan $orderClass dan $align sesuai kebutuhan.}
+        foreach ($data as $index => $ekskul) {
+            $orderClass = $index % 2 === 0 ? 'order-lg-2' : 'order-lg-1';
+            $align = $index % 2 === 0 ? 'left' : 'right';
 
             echo '
             <div class="container-xxl py-5" >
             <div class= "container">
                 <div class="row g-5">
                 <hr class="featurette-divider">
-                        <div  class="col-lg-7  ' . $orderClass . '">
-                            <h2 align="' . $align . '" id="ekskul-title">' . $ekskul['title'] . '</h2>
-                            <p align="justify" ' . ($index % 2 === 0 ? 'align="left"' : '') . ' id="ekskul-description">' . $ekskul['description'] . '</p>
-                        </div>
-
-                        <div class="col-lg-5  ' . $orderClass . '">
-                            <img src="' . $ekskul['image'] . '" style="border-radius: 30px 30px 30px 30px;" class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500" alt="Ekskul Image">
-                        </div>
-                 </div>
+                    <div class="col-lg-7  ' . $orderClass . '">
+                        <h2 align="' . $align . '" id="ekskul-title">' . $ekskul['title'] . '</h2>
+                        <p align="justify" ' . ($index % 2 === 0 ? 'left' : '') . '" id="ekskul-description">' . $ekskul['description'] . '</p>
+                    </div>
+                    <div class="col-lg-5  ' . $orderClass . '">
+                        <img src="' . $ekskul['image'] . '" style="border-radius: 30px 30px 30px 30px;" class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500" alt="Ekskul Image">
+                    </div>
+                </div>
             </div>
             </div>
             ';
