memperbaiki edit profile

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -787,3 +787,15 @@
     height: 50px;
     bottom: 10px;
   }
+
+  .container-i {
+    position: relative;
+    max-width: 700px;
+    width: 100%;
+    background: #fff;
+    padding: 25px;
+    border-radius: 8px;
+    box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
+  }
+  
+  
