--- a/public/css/style.css
+++ b/public/css/style.css
@@ -24,8 +24,14 @@
 .card {
   background: #fff;
   border-radius: 8px;
-  box-shadow: 10px 10px 15px #c5c5c5,-10px -10px  #fff;
-  
+  box-shadow: 10px 10px 15px #c5c5c5;
+  background: transparent;
+  border: 2px solid rgba(255, 255, 255, .2);
+  color:#000000;
+  border-radius: 20px;
+  border: rounded;
+  overflow: hidden;
+
 
 }
 .card .image-box {
@@ -184,15 +190,6 @@
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
   }
 
-  .card {
-      background: transparent;
-      border: 2px solid rgba(255, 255, 255, .2);
-      color:#000000;
-      border-radius: 20px;
-      border: rounded;
-      overflow: hidden;
-
-  }
 .card-footer {
     background-color: transparent;
     border: none;
